--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        You are looking lovely!
+        You are looking lovely! Why thank you!
     </body>
 </html>
